--- a/custom dropdown list/style.css
+++ b/custom dropdown list/style.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("https://wallpapercave.com/wp/wp9736911.jpg") no-repeat center center/cover;
+    background: url("img1.jpg") no-repeat center center/cover;
 }
 
 .dropdown{
